--- a/app movil/package.json
+++ b/app movil/package.json
@@ -39,7 +39,8 @@
         "@ng-bootstrap/ng-bootstrap": "8.0.0",
         "@prettier/plugin-pug": "1.10.1",
         "chart.js": "2.9.4",
-        "jspdf": "^2.3.1",
+        "html2canvas": "^1.0.0-rc.7",
+        "jspdf": "^1.5.3",
         "object-hash": "2.0.3",
         "rxjs": "6.6.3",
         "tslib": "2.0.3",
@@ -55,8 +56,10 @@
         "@inip/static-server": "1.0.1",
         "@sbpro/ng": "1.4.2",
         "@types/chart.js": "2.9.28",
+        "@types/html2canvas": "0.0.36",
         "@types/jasmine": "3.6.1",
         "@types/jasminewd2": "2.0.8",
+        "@types/jspdf": "^1.3.3",
         "@types/node": "14.14.8",
         "@types/object-hash": "1.3.4",
         "@types/uuid": "8.3.0",
