--- a/app web/package.json
+++ b/app web/package.json
@@ -53,6 +53,7 @@
         "@angular/cli": "^11.2.11",
         "@angular/compiler-cli": "11.0.1",
         "@angular/language-service": "11.0.1",
+        "@angular/localize": "^11.0.1",
         "@inip/static-server": "1.0.1",
         "@sbpro/ng": "1.4.2",
         "@types/chart.js": "2.9.28",
